--- a/index.html
+++ b/index.html
@@ -457,8 +457,10 @@
             <section class="section">
                 <p class="summary-text">
                     <strong>6+ năm kinh nghiệm</strong> phát triển hệ thống Backend (Node.js, Laravel) và Fullstack (Next.js, Angular).
-                    Thế mạnh: xây dựng <strong>API Gamification</strong>, hệ thống <strong>Booking/CMS</strong>, tools tạo <strong>Banner/Animation</strong>.
-                    Thành thạo <strong>TypeORM, Prisma, Redis, Socket.io</strong> và triển khai Docker.
+                    Chuyên xây dựng <strong>API enterprise-scale</strong> (35+ entities, 60+ endpoints), <strong>Multi-tenant architecture</strong>,
+                    hệ thống <strong>Real-time WebSocket</strong>. Đạt <strong>70% DB load reduction</strong> với Redis,
+                    <strong>80% time savings</strong> với automation. Thành thạo <strong>Web scraping</strong> (Puppeteer, 99.9% success rate),
+                    <strong>TypeORM/Prisma</strong>, và <strong>Docker deployment</strong>.
                 </p>
             </section>
 
@@ -473,38 +475,53 @@
                     <div class="exp-company">VCCORP (Admicro)</div>
                     <ul class="exp-details">
                         <li>
-                            <strong>KamGift Gamification API</strong> - Hệ thống quản lý Campaign & Game B2B2C.
-                            <span class="metric">35+ entities</span> <span class="metric">60+ endpoints</span>
-                            <br>Tech: Node.js, TypeORM, MySQL, Redis, Socket.io, JWT
+                            <strong>KamGift Gamification API</strong> - Hệ thống Multi-tenant B2B2C quản lý Campaign & Game.
+                            <span class="metric">35+ entities</span> <span class="metric">60+ endpoints</span> <span class="metric">70% DB load ↓</span>
+                            <br>• 5-level API logging system • Game copy feature (80% time savings) • Email queue 1000+/min
+                            <br>Tech: Node.js, TypeORM, MySQL, Redis, Socket.io, JWT, Docker
                         </li>
                         <li>
-                            <strong>PR Booking</strong> - Hệ thống quản lý đặt booking quảng cáo.
-                            <span class="metric">5000+ bookings/tháng</span>
-                            <br>Tech: Laravel 8, Voyager CMS, Pusher WebSocket, Excel/PDF export
+                            <strong>PR Booking</strong> - Hệ thống quản lý booking quảng cáo enterprise.
+                            <span class="metric">5000+ bookings/tháng</span> <span class="metric">1000+ customers</span> <span class="metric">99.9% uptime</span>
+                            <br>• 40+ Laravel models • Export 10,000+ records <5s • Real-time Pusher notifications
+                            <br>Tech: Laravel 8, Voyager CMS, Pusher WebSocket, Excel/PDF export, Gmail API
                         </li>
                         <li>
-                            <strong>Animate Studio</strong> - Tool tạo Banner HTML5 với Timeline/Keyframe.
-                            <span class="metric">1000+ layers</span>
-                            <br>Tech: Angular, TypeScript, @ngrx/store, Canvas SVG, Tween System
-                        </li>
-                        <li>
-                            <strong>Game Center</strong> - Nền tảng tạo & quản lý Game Campaign.
-                            <br>Tech: Next.js 16, React 19, Redux Toolkit, GSAP, React Hook Form + Zod
-                        </li>
-                        <li>
-                            <strong>Studio Banner</strong> - Nền tảng tạo banner với Web Scraping.
+                            <strong>Studio Banner</strong> - Nền tảng tạo banner tự động với Web Scraping.
+                            <span class="metric">10,000+ templates</span> <span class="metric">99.9% scraping success</span> <span class="metric">50+ websites</span>
+                            <br>• Puppeteer headless browser • Cheerio parser • ZIP export <5s
                             <br>Tech: Next.js 15, Prisma 6, Puppeteer, Cheerio, Tailwind CSS 4
                         </li>
                         <li>
+                            <strong>Animate Studio</strong> - Tool tạo Banner HTML5 với Timeline/Keyframe editor.
+                            <span class="metric">1000+ layers</span> <span class="metric">50+ effects</span>
+                            <br>• Custom tween system • PSD import • Real-time preview
+                            <br>Tech: Angular, TypeScript, @ngrx/store, Canvas SVG, Custom Animation Engine
+                        </li>
+                        <li>
+                            <strong>Game Center</strong> - Nền tảng tạo & quản lý Game Campaign.
+                            <span class="metric">1000+ creators</span> <span class="metric">100+ templates</span> <span class="metric"><10s creation</span>
+                            <br>Tech: Next.js 16, React 19, Redux Toolkit, GSAP, React Hook Form + Zod
+                        </li>
+                        <li>
+                            <strong>Fandom</strong> - Nền tảng cộng đồng fan với Top List & Social features.
+                            <span class="metric">50,000+ DAU</span> <span class="metric">1000+ sessions</span> <span class="metric">Page load <2s</span>
+                            <br>• Social login (Facebook, Google OAuth2) • Redux Persist • SWR data fetching • Infinite scroll
+                            <br>Tech: Next.js 16, React 19, Next-auth 5.0, Redux Toolkit, Bootstrap 5, FancyApps
+                        </li>
+                        <li>
                             <strong>Event Ticket</strong> - Hệ thống bán vé sự kiện với QR code, OTP.
-                            <br>Tech: Express, EJS, Passport.js, Nodemailer, device-id tracking
+                            <span class="metric">10,000+ users</span> <span class="metric">QR verify <1s</span>
+                            <br>• Device UUID tracking • Multi-auth (OTP, QR, Device ID)
+                            <br>Tech: Express, EJS, Passport.js, Nodemailer, node-machine-id
                         </li>
                     </ul>
                     <div class="tech-highlight">
                         <span class="tag">Multi-tenant Architecture</span>
                         <span class="tag">Real-time WebSocket</span>
-                        <span class="tag">API Logging 5 levels</span>
-                        <span class="tag">Anti-cheat Backend</span>
+                        <span class="tag">5-level API Logging</span>
+                        <span class="tag">Web Scraping (99.9%)</span>
+                        <span class="tag">Performance Optimization</span>
                     </div>
                 </div>
 
@@ -553,11 +570,13 @@
             <section class="section">
                 <h3 class="section-title"><i class="fa-solid fa-star"></i> Điểm Nổi Bật</h3>
                 <ul class="exp-details" style="padding-left: 18px;">
-                    <li><strong>Multi-tenant Architecture</strong>: Data isolation giữa clients/brands trong gamification</li>
-                    <li><strong>Real-time Systems</strong>: Socket.io cluster, Pusher cho notifications & game events</li>
-                    <li><strong>Complex State Management</strong>: Timeline/Keyframe editor, Redux, @ngrx/store</li>
-                    <li><strong>Web Scraping</strong>: Puppeteer headless browser, Cheerio parser cho e-commerce data</li>
-                    <li><strong>Automation Testing</strong>: Playwright E2E, API testing cho production systems</li>
+                    <li><strong>Enterprise-scale API Development</strong>: 35+ entities, 60+ endpoints, xử lý 5000+ requests/ngày</li>
+                    <li><strong>Multi-tenant Architecture</strong>: Data isolation hoàn toàn giữa clients/brands, custom fields per tenant</li>
+                    <li><strong>Performance Optimization</strong>: 70% DB load reduction (Redis), 80% time savings (automation)</li>
+                    <li><strong>Real-time Systems</strong>: Socket.io cluster, Pusher WebSocket cho notifications & game events</li>
+                    <li><strong>Web Scraping Expertise</strong>: Puppeteer automation, 99.9% success rate trên 50+ websites</li>
+                    <li><strong>Advanced Logging</strong>: 5-level API logging system với full request/response capture</li>
+                    <li><strong>Complex State Management</strong>: Timeline/Keyframe editor, Redux Toolkit, @ngrx/store</li>
                 </ul>
             </section>
         </main>
